fix: overflowing content__body

--- a/src/scss/layouts/_main.scss
+++ b/src/scss/layouts/_main.scss
@@ -96,6 +96,7 @@
 
 .content__body {
     @include owl;
+    overflow: hidden;
 
     @include media("above:medium") {
         grid-column: content;
